Build file tweaks:  * mostly documentation updated, but also  * made "help" the default target  * rename the *.NOT files back

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project xmlns:if="ant:if" xmlns:unless="ant:unless" 
    name="dhq"
-   default="previewArticle">
+   default="help">
   
   <description>
     Apache Ant buildfile for Digital Humanities Quarterly.
@@ -59,67 +59,63 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo>  ant [-lib common${file.separator}lib${file.separator}saxon] [-Dprop=val ...] [target ...]</echo>
     <echo>Where:</echo>
     <echo>-lib common${file.separator}lib${file.separator}saxon</echo>
-    <echo>  is required if the chosen target performs XSL transformations, but is optional otherwise.</echo>
+    <echo>  is required if the chosen target performs XSL transformations, optional otherwise.</echo>
     <echo>-Dprop=val</echo>
     <echo>  is how you send parameters (which ant calls “properties”) to the process; typically</echo>
     <echo>  used to say which specific article file to work on, e.g. “-Darticle.id=000370”.</echo>
     <echo>  (The “...” just means that you can use multiple -Dprop=val, as needed.)</echo>
     <echo>target</echo>
-    <echo>  indicates what you want done. For a list of possible targets with short descriptions,</echo>
-    <echo>  issue `ant -projecthelp`. For longer descriptions, read on.</echo>
+    <echo>  indicates what you want done. For a list of possible targets with short</echo> 
+    <echo>  descriptions, issue `ant -projecthelp`. For longer descriptions, read on.</echo>
     <echo/>
     <echo>Targets:</echo>
-    <echo>       (Note that the “...” above means you can execute multiple targets at once;</echo>
-    <echo>        however, this should rarely be necessary or even particularly helpful in</echo>
-    <echo>        the DHQ case.)</echo>
+    <echo>       (Note that the “...” above means you can execute multiple targets at</echo>
+    <echo>        once; however, this should rarely be necessary or even particularly</echo>
+    <echo>        helpful in the DHQ case.)</echo>
     <echo>help</echo>
-    <echo>  What you are reading now.</echo>
-    <echo>previewArticle                            (this is the default target)</echo>
-    <echo>  transform one article XML file (specified via its 6-digit number with</echo>
-    <echo>  -Darticle.id=, or via a prompt) into HTML. The output file is placed</echo>
-    <echo>  in the ${previewDir}${file.separator} subdirectory. It has relative links to assets in</echo>
-    <echo>  this main directory (not the subdirectory), and thus should be suit-</echo>
-    <echo>  able for viewing on your local machine. (And may not be suitable for</echo>
-    <echo>  use on the server.)</echo>
+    <echo>  What you are reading now, and the default target.</echo>
+    <echo>previewArticle</echo>
+    <echo>  transform one article XML file (specified via its 6-digit number with -Darticle.id=,</echo>
+    <echo>  or via a prompt) into HTML. The output file is placed in the ${previewDir}${file.separator} subdirect-</echo>
+    <echo>  ory. It has relative links to assets in this main directory (not the subdirectory),</echo>
+    <echo>  and thus should be suitable for viewing on your local machine. (And may not be suit-</echo>
+    <echo>  able for use on the server.)</echo>
     <echo>zipPreviewArticle</echo>
-    <echo>  similar to 'previewArticle', but: a) The output HTML file *and* its</echo>
-    <echo>  assets are archived together into a single ZIP file. b) The output</echo>
-    <echo>  HTML file uses relative links to the assets in the same directory,</echo>
-    <echo>  as would happen when the ZIP file is unzipped. Both the HTML file</echo>
-    <echo>  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory, overwrit-</echo>
-    <echo>  ing any previous version there.</echo>
+    <echo>  similar to 'previewArticle', but: a) The output HTML file *and* its assets are</echo>
+    <echo>  archived together into a single ZIP file. b) The output HTML file uses relative</echo>
+    <echo>  links to the assets in the same directory, as would happen when the ZIP file is</echo>
+    <echo>  unzipped. Both the HTML file and the ZIP file are put in the ${previewDir}${file.separator} sub-</echo>
+    <echo>  directory, overwriting any previous version there.</echo>
     <echo>generateIssues</echo>
-    <echo>  generates the index pages and HTML for each issue listed in the</echo>
-    <echo>  toc${file.separator}toc.xml file, including the article itself, the author</echo>
-    <echo>  biographies, and the “landing” page. The output is placed in the</echo>
-    <echo>  ${toDir.static}${file.separator} directory, i.e. in a sibling to this directory, over-</echo>
-    <echo>  writing any previous version. (Some temporary files are also placed in</echo>
-    <echo>  ${toDir.base}${file.separator}.) The output is designed to be viewed from a server, as</echo>
-    <echo>  it uses absolute filepaths to its assets. Thus it will not work properly</echo>
-    <echo>  (and will look ugly) if viewed on your local machine.</echo>
+    <echo>  generates the index pages and HTML for each issue listed in the toc${file.separator}toc.xml file,</echo>
+    <echo>  including the article itself, the author biographies, and the “landing” page. The</echo>
+    <echo>  output is placed in the ${toDir.static}${file.separator} directory, i.e. in a sibling to this</echo>
+    <echo>  directory, overwriting any previous version. (Some temporary files are also placed</echo>
+    <echo>  in ${toDir.base}${file.separator}.) The output is designed to be viewed from a server, both because</echo>
+    <echo>  it uses absolute filepaths to its assets, and because the search functionality re-</echo>
+    <echo>  quires a server. Thus it will not work properly (and will look ugly) if viewed on</echo>
+    <echo>  your local machine.</echo>
     <echo>generateSite</echo>
-    <echo>  As above, but also copies over each article’s resources, various web assets, and the</echo>
-    <echo>  required bits of the submissions${file.separator} &amp; common${file.separator} subdirectories; obtains the XHTML 1.0</echo>
-    <echo>  strict DTD; adds headers &amp; footers to static pages; and creates a ZIP file of only the</echo>
-    <echo>  article XML files in ${toDir.static}${file.separator}data${file.separator}dhq-xml.zip.</echo>
-    <echo>  Note that, as with "generateIssues", files use absolute filepaths.</echo>
+    <echo>  As "generateIssues" above, but also copies over each article’s resources, various web</echo>
+    <echo>  assets, and the required bits of the submissions${file.separator} &amp; common${file.separator} subdirectories; obtains</echo>
+    <echo>  the XHTML 1.0 strict DTD; adds headers &amp; footers to static pages; and creates a ZIP</echo>
+    <echo>  file of only the article XML files in ${toDir.static}${file.separator}data${file.separator}dhq-xml.zip. Note that,</echo>
+    <echo>  as with "generateIssues", files use absolute filepaths.</echo>
     <echo>generateSiteToGo</echo>
     <echo>  As "generateSite" above, but then also creates a compressed archive of the generated</echo>
-    <echo>  output to make it easy to transfer (e.g., to a server). The output file can be found at</echo>
-    <echo>  ${toDir.base}${file.separator}${context}.zip.</echo>
+    <echo>  output to make it easy to transfer (e.g., to a server). The output file can be found</echo>
+    <echo>  at ${toDir.base}${file.separator}${context}.zip.</echo>
     <echo>generateSearchable</echo>
-    <echo>  As above, but then also uses (our copy of) the University
-    of Victoria Endings Project StaticSearch tool to generate a search
-    page at
-    ${toDir.static}${file.separator}dhq${file.separator}vol${file.separator}search.html. This
-    takes awhile as a complete index (in JSON) is built for almost
-    every file. Those files that are not well-formed XML have to be
-    excluded. To do perform the exclusion this build process
-    temporarily renames them (to *.NOTxhtml) and then renames them back.</echo>
+    <echo>  As "generateSite" above, but then also uses (our copy of) the University of</echo>
+    <echo>  Victoria Endings Project StaticSearch tool to generate search capability. A</echo>
+    <echo>  separate JSON index file is created for every word found, and the search page</echo>
+    <echo>  at ${toDir.static}${file.separator}dhq${file.separator}vol${file.separator}search.html uses these for very fast searching.</echo>
+    <echo>  However, Those files that are not well-formed XML have to be excluded; thus this</echo>
+    <echo>  build process temporarily renames them (to *.NOTxhtml) and then renames them back.</echo>
     <echo>generateSearchableToGo</echo>
-    <echo>  As "generateSearchable" above, but then also creates a compressed archive of the generated</echo>
-    <echo>  output to make it easy to transfer (e.g., to a server). The output file can be found at</echo>
-    <echo>  ${toDir.base}${file.separator}${context}.zip.</echo>
+    <echo>  As "generateSearchable" above, but then also creates a compressed archive of the</echo>
+    <echo>  generated output to make it easy to transfer (e.g., to a server). The output file</echo>
+    <echo>  can be found at ${toDir.base}${file.separator}${context}.zip.</echo>
   </target>
 
   <!-- Generate static HTML versions of the DHQ issues (articles, bios, & indices). -->
@@ -143,7 +139,7 @@ is loaded when Ant starts up. Please run Ant again like this:
 
   <!-- Generate a static version of the DHQ website. -->
   <target name="generateSite" depends="checkXmlResolver,generateIssues"
-     description="Generate a full static copy of DHQ intended for the DHQ server. This is NOT a standalone copy.">
+     description="Generate a static copy of DHQ (without search capability) intended for the DHQ server. This is NOT a standalone copy.">
     <mkdir dir="${toDir.static}"/>
     <!-- Use the Ant build file created in "generateIssues" to copy articles' 
       resources to the right static directories. -->
@@ -228,60 +224,62 @@ is loaded when Ant starts up. Please run Ant again like this:
          target="zipArticleXml" inheritRefs="true"/>
   </target>
 
-  <target name="generateSiteToGo" depends="generateSite">
+  <target name="generateSiteToGo" depends="generateSite"
+	  description="Generate a static copy of DHQ (without search capability), and ZIP it for easy transfer to a server. This is NOT a standalone copy.">
     <!-- Generate the ZIP file of the entire static site. -->
     <antcall target="compressStatic"/>
   </target>
 
-  <target name="generateSearchable" depends="generateSite">
+  <target name="generateSearchable" depends="generateSite"
+	  description="Generate a searchable static non-standalone copy of DHQ.">
     <echo>DEBUG: toDir=${toDir}, toDir.static=${toDir.static}, and uvepssDir=${uvepssDir}</echo>
     <!-- Copy a few needed files over -->
     <copy todir="${toDir.static}/data/uvepss">
       <fileset dir="data/uvepss"/>
     </copy>
-    <copy file="${toDir.static}/data/uvepss/search.html" todir="dhq/vol"/>
+    <copy file="${toDir.static}/data/uvepss/search.html" todir="${toDir.static}/vol"/>
     <echo> ... renaming ill-formed files (which would make this process crash) out of the way</echo>
     <!--
-	UVEPSS will only operate on well-formed XHTML 5 files. This, I
-	think, is a good thing; a feature, not a bug. But as it is
-	indexing, if it comes across an ill-formed HTML file the
-	entire process dies. This, I think is not the right way to do
-	this; a bug. It should (IMHO) instead issue a strongly worded
-	error message, skip the ill-formed file, and continue. But I
-	do not get to make that call. (Although I do plan to submit a
-	bug report to see if this can be changed.) So for now, here we
-	need to work around this problem. So what we do is rename each
-	of thte ill-formed files within the target directory to an
-	extension that UVEPSS will ignore, and rename it back when we
-	are done.
-	You can’t just use `ant wf` (in those branches that have it)
-	to discover which files are ill-formed, because that command
-	only looks at article files, not ancillary files. So I used
-	$ for f in $(find dhq/vol -name '*ml') ; do xmlwf $f ; done
-	It would be better to use
-	$ find dhq/vol -type f -name '*ml' -print0 | while read -d $'\0' f; do xmlwf $f ; done
-	because the file "dhq/vol/16/3/000636/losh .xhtml" contains a
-	space in the filename.
-	— Syd, 2024-02-19
+        UVEPSS will only operate on well-formed XHTML 5 files. This, I
+        think, is a good thing; a feature, not a bug. But as it is
+        indexing, if it comes across an ill-formed HTML file the
+        entire process dies. This, I think is not the right way to do
+        this; a bug. It should (IMHO) instead issue a strongly worded
+        error message, skip the ill-formed file, and continue. But I
+        do not get to make that call. (Although I do plan to submit a
+        bug report to see if this can be changed.) So for now, here we
+        need to work around this problem. So what we do is rename each
+        of thte ill-formed files within the target directory to an
+        extension that UVEPSS will ignore, and rename it back when we
+        are done.
+        You can’t just use `ant wf` (in those branches that have it)
+        to discover which files are ill-formed, because that command
+        only looks at article files, not ancillary files. So I used
+        $ for f in $(find dhq/vol -name '*ml') ; do xmlwf $f ; done
+        It would be better to use
+        $ find dhq/vol -type f -name '*ml' -print0 | while read -d $'\0' f; do xmlwf $f ; done
+        because the file "dhq/vol/16/3/000636/losh .xhtml" contains a
+        space in the filename.
+        — Syd, 2024-02-19
     -->
     <move todir="${toDir.static}/vol">
       <fileset dir="${toDir.static}/vol">
-	<include name="9/2/000216/queerfemnotes.html"/>
-	<include name="9/2/000216/resources/html/queerfemnotes.html"/>
-	<include name="17/2/000652/resources/webmap_code/figure11/Figure_11.html"/>
-	<include name="17/2/000652/resources/webmap_code/figure10/figure10.html"/>
-	<include name="17/3/000720/000720_ko.xml"/>
-	<include name="11/2/000285/resources/images/333-1962-1-SP.html"/>
-	<include name="11/2/000285/resources/html/prototype.html"/>
-	<!--
+        <include name="9/2/000216/queerfemnotes.html"/>
+        <include name="9/2/000216/resources/html/queerfemnotes.html"/>
+        <include name="17/2/000652/resources/webmap_code/figure11/Figure_11.html"/>
+        <include name="17/2/000652/resources/webmap_code/figure10/figure10.html"/>
+        <include name="17/3/000720/000720_ko.xml"/>
+        <include name="11/2/000285/resources/images/333-1962-1-SP.html"/>
+        <include name="11/2/000285/resources/html/prototype.html"/>
+        <!--
             Note: these last 2 files are ill-formed in at least two ways:
             1) SYSTEM identifier of "http://www.w3.org/TR/html4/strict.dtd",
-	       which is NOT an XML DTD;
+               which is NOT an XML DTD;
             2) <meta> start-tag on 7 or 13 (depending on whether or not you
-	       count those crazy ^M chars) does not have an end-tag.
-	-->
-	<include name="7/1/000149/resources/source/000149.html"/>
-	<include name="7/1/000149/resources/source/ss.html"/>
+               count those crazy ^M chars) does not have an end-tag.
+        -->
+        <include name="7/1/000149/resources/source/000149.html"/>
+        <include name="7/1/000149/resources/source/ss.html"/>
       </fileset>
       <mapper type="glob" from="*" to="*.NOT"/>
     </move>
@@ -290,17 +288,17 @@ is loaded when Ant starts up. Please run Ant again like this:
     <ant dir="${uvepssDir}" antfile="build.xml">
       <property name="ssConfigFile" value="${absolute.config.file}"/>
     </ant>
-    <!--
     <echo> ... renaming ill-formed files back</echo>
     <move todir="${toDir.static}/vol">
-      <filesetdir="${toDir.static}/vol">
-	<filename name="**/*.NOT"/>
+      <fileset dir="${toDir.static}/vol">
+        <filename name="**/*.NOT"/>
       </fileset>
       <mapper type="glob" from="*.NOT" to="*"/>
-    </move> -->
+    </move>
   </target>
   
-  <target name="generateSearchableToGo" depends="generateSearchable">
+  <target name="generateSearchableToGo" depends="generateSearchable"
+	  description="Generate a searchable static non-standalone copy of DHQ, and ZIP it for easy transfer to server.">
     <!-- Generate the ZIP file of the entire static site. -->
     <antcall target="compressStatic"/>
   </target>
@@ -312,17 +310,8 @@ is loaded when Ant starts up. Please run Ant again like this:
     </zip>
   </target>
 
-  <target name="defaultnotice">
-    <echo>#</echo>
-    <echo># Generating single article preview.</echo>
-    <echo>#</echo>
-    <echo># For usage information issue `ant help`.</echo>
-    <echo># For target list issue `ant -projecthelp`.</echo>
-    <echo>#</echo>
-  </target>
-  
   <!-- Create an HTML preview version of a single article. -->
-  <target name="previewArticle" depends="defaultnotice,checkXmlResolver" 
+  <target name="previewArticle" depends="checkXmlResolver" 
      description="Create an HTML preview version of a single article.">
     <!-- If the 'article.id' property wasn't already set using the command line, Ant 
       will prompt for it. -->
@@ -335,7 +324,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       <matches string="${article.id}" pattern="^[0-8]\d{5,5}$"/>
     </condition>
     <fail unless="article.id.ok"
-       message="An article ID must be 6 digits long. It must not start with '9'"/>
+       message="An article ID must be 6 digits long, and must not start with '9'"/>
     <!-- Set the assets path if it hasn't already been set. -->
     <property unless:set="assets.path" name="assets.path" 
       value="..${file.separator}"/>
