Even a bit *more* clean-up prior to languagization

--- a/build.xml
+++ b/build.xml
@@ -248,7 +248,7 @@ is loaded when Ant starts up. Please run Ant again like this:
         do not get to make that call. (Although I do plan to submit a
         bug report to see if this can be changed.) So for now, here we
         need to work around this problem. So what we do is rename each
-        of thte ill-formed files within the target directory to an
+        of the ill-formed files within the target directory to an
         extension that UVEPSS will ignore, and rename it back when we
         are done.
         You can’t just use `ant wf` (in those branches that have it)
@@ -256,13 +256,14 @@ is loaded when Ant starts up. Please run Ant again like this:
         only looks at article files, not ancillary files. So I used
         $ for f in $(find dhq/vol -name '*ml') ; do xmlwf $f ; done
         It would be better to use
-        $ find dhq/vol -type f -name '*ml' -print0 | while read -d $'\0' f; do xmlwf $f ; done
+        $ find dhq/vol -type f -name '*ml' -print0 | while read -d $'\0' f; do xmlwf "$f" ; done
         because the file "dhq/vol/16/3/000636/losh .xhtml" contains a
         space in the filename.
         — Syd, 2024-02-19
     -->
     <move todir="${toDir.static}/vol">
       <fileset dir="${toDir.static}/vol">
+	<!-- Set of ill-formed files last updated 2024-03-22 -->
         <include name="9/2/000216/queerfemnotes.html"/>
         <include name="9/2/000216/resources/html/queerfemnotes.html"/>
         <include name="17/2/000652/resources/webmap_code/figure11/Figure_11.html"/>
