Add lang srch & swap iss & vol:  1) Added a post-processor to swap the “volume” and “issue” search boxes into the correct order.  2) Checked in the data/uvepss/ directory (which I had failed to do earlier)-:  3) Altered uvepss config file so that some hand-picked languages are searched for. This version works, but only because the number of languages is kept down. With a huge number of languages (which I was experimenting with in the hopes that staticSearch would automatically not put those that do not occur in the dataset into the search page) ant aborts with a Java stack overflow error.

--- a/build.xml
+++ b/build.xml
@@ -295,6 +295,15 @@ is loaded when Ant starts up. Please run Ant again like this:
       </fileset>
       <mapper type="glob" from="*.NOT" to="*"/>
     </move>
+    <echo> ... tweaking UVEPSS search page</echo>
+    <xslt in="${toDir.static}/vol/search.html"
+          out="${toDir.static}/vol/search_DHQ_articles.html"
+          style="${toDir.static}/common/xslt/uvepss_post_process_search_page.xslt"
+          classpath="${processor.location}"
+          force="true"
+          failonerror="false">
+      <factory name="${processor.name}"/>
+    </xslt>    
   </target>
   
   <target name="generateSearchableToGo" depends="generateSearchable"
