changes to comments

--- a/build.xml
+++ b/build.xml
@@ -263,7 +263,7 @@ is loaded when Ant starts up. Please run Ant again like this:
     -->
     <move todir="${toDir.static}/vol">
       <fileset dir="${toDir.static}/vol">
-        <!-- Set of ill-formed files last updated 2024-03-22 -->
+        <!-- Set of ill-formed files last updated 2024-05-09 -->
         <include name="9/2/000216/queerfemnotes.html"/>
         <include name="9/2/000216/resources/html/queerfemnotes.html"/>
         <include name="17/2/000652/resources/webmap_code/figure11/Figure_11.html"/>
@@ -291,7 +291,7 @@ is loaded when Ant starts up. Please run Ant again like this:
         preview edition of the article (usually, but not always, named
         ${article.id}.xhtml; as far as I can tell always having a
         <title> that starts with “[PREVIEW] DHQ: Digital Humanities
-        Quarterly:”, and sometimes has other stuff after that. If we
+        Quarterly:”, and sometimes has other stuff after that). If we
         leave these files in the output dhq-static/dhq/vol/ hierarchy
         they will get inappropriately indexed for searching;
         furthermore, if the preview shares the same filename as the
